# MuseScore

./: CMakeLists.txt  oipluginregistry.xml
libmscore/: connector.h  element.h  mscore.h
mscore/: CMakeLists.txt  musescore.cpp
vst/: CMakeLists.txt  PluginFrame.h  vst.cpp  vst.h  vst_gui.ui  vstgui.cpp  vstgui.h
vst/apps/presetmanager/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PluginFrame.cpp  main.cpp  resources.qrc
vst/bindings/portaudio/: CMakeLists.txt  PortAudioPlayer.cpp  PortAudioPlayer.h
vst/bindings/qt/: CMakeLists.txt  QEditor.cpp  QEditor.h  QPluginView.cpp  QPluginView.h  QProgress.cpp  QProgress.h  QtSplashScreenProgress.cpp  QtSplashScreenProgress.h  QtTimerFactory.cpp  QtTimerFactory.h
vst/bindings/rtmidi/: CMakeLists.txt  RtMidiInputSource.cpp  RtMidiInputSource.h
vst/bindings/vst/: CMakeLists.txt  VSTAudioPlugin.cpp  VSTAudioPlugin.h  VSTModule.cpp  VSTModule.h  VstAudioHost.cpp  VstAudioHost.h  VstAudioPluginProxy.cpp  VstAudioPluginProxy.h  VstEditor.cpp  VstEditor.h  VstEditorProxy.cpp  VstEditorProxy.h  VstEffectProxy.cpp  VstEffectProxy.h  vst.h
vst/bindings/vst/osx/: VSTModuleOSX.cpp  VSTModuleOSX.h
vst/bindings/vst/windows/: VSTModuleWindows.cpp  VSTModuleWindows.h
vst/lib/: CMakeLists.txt
vst/lib/audio/: AudioPlayer.cpp  AudioPlayer.h  AudioProcessor.h  AudioSampleBuffer.cpp  AudioSampleBuffer.h
vst/lib/host/: AudioHost.cpp  AudioHost.h  PluginRegistry.cpp  PluginRegistry.h  PluginView.h  TimerFactory.h
vst/lib/host/exception/: PluginInitializationException.cpp  PluginInitializationException.h
vst/lib/host/graph/: AudioGraph.cpp  AudioGraph.h  SinglePluginGraph.cpp  SinglePluginGraph.h
vst/lib/host/state/: PluginStateFileParser.cpp  PluginStateFileParser.h
vst/lib/midi/: MidiMessage.cpp  MidiMessage.h  MidiMessageBuffer.cpp  MidiMessageBuffer.h  MidiSource.cpp  MidiSource.h
vst/lib/plugin/: AudioPlugin.h  BaseAudioPlugin.cpp  BaseAudioPlugin.h  Editor.h
vst/lib/util/: Data.cpp  Data.h
vst/lib/util/progress/: Progress.h
